--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wpq-Zw-PGg">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -1330,11 +1331,25 @@
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="47"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K1v-L2-p1T">
-                                                    <rect key="frame" x="205" y="9" width="150" height="30"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K1v-L2-p1T">
+                                                    <rect key="frame" x="0.0" y="-7" width="560" height="61"/>
                                                     <state key="normal" title="Button"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="3"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="onUnattendTapped:" destination="xuK-gb-v0P" eventType="touchUpInside" id="G9I-WQ-qJr"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="K1v-L2-p1T" secondAttribute="trailing" constant="-8" id="4EE-ZX-Rav"/>
+                                                <constraint firstItem="K1v-L2-p1T" firstAttribute="top" secondItem="dXZ-KT-iNs" secondAttribute="topMargin" constant="-15" id="Jx3-Nx-gJv"/>
+                                                <constraint firstItem="K1v-L2-p1T" firstAttribute="leading" secondItem="dXZ-KT-iNs" secondAttribute="leadingMargin" constant="-8" id="TCt-Ns-qB2"/>
+                                                <constraint firstItem="K1v-L2-p1T" firstAttribute="bottom" secondItem="dXZ-KT-iNs" secondAttribute="bottomMargin" constant="15" id="feS-0l-Khb"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="232" id="6CN-df-ayB">
@@ -1356,6 +1371,7 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="attendButton" destination="K1v-L2-p1T" id="Xeq-Nj-BBt"/>
                         <outlet property="eventDataLabel" destination="9PX-sS-5Jz" id="wEc-ac-YpE"/>
                         <outlet property="eventGuestsLabel" destination="Ihe-0Z-o2r" id="iTo-nt-Qcg"/>
                         <outlet property="eventNameLabel" destination="gXE-Ic-q25" id="xhZ-mI-wSc"/>
